syntax="proto3";

message AverageRequest{
	int32 number=1;
}

message AverageResponse{
	double result=1;
}

service AverageService{

// Client Streaming 

rpc ComputeAverage(stream AverageRequest) returns (AverageResponse){}

}